Changelog
=========

Changes from cgkit-2.0.0alpha7 to cgkit-2.0.0alpha8:

Bug fixes/enhancements:

- simplecpp: Don't use keyword arguments to pass the compare function to
  sort(). This wasn't supported before Python 2.4.

----------------------------------------------------------------------
Changes from cgkit-2.0.0alpha6 to cgkit-2.0.0alpha7:

New features:

- The license has changed. Instead of the LGPL cgkit now uses the
  MPL/GPL/LGPL tri-license (this applies to the Python package "cgkit").
  The Maya package und plugin uses the MPL.
- New class MayaSpotLight that approximates spot lights as they appear
  in Maya. The object is created by the ma importer.

Bug fixes/enhancements:

- simplecpp: The built-in preprocessor (which is used for parsing RenderMan
  shaders) is now a bit more capable than before (but it's still not a full 
  replacement for a true preprocessor).
  It now handles line-continuation, preprocessor directives and macros
  that do not take arguments.
  The slparams.slparams() function and the RMShader constructor now have
  new arguments 'includedirs' and 'defines' which are passed to the
  preprocessor (either the built-in one or the external one).
- setup.py: The setup script doesn't check for the Boost.Python header
  anymore because the test didn't take the built-in paths (such as
  /usr/include) into account.
- quat: By default, the slerp() function now always interpolates along
  the shortest path. The function has a new optional argument "shortest"
  (default: True) that controls this behavior. If you set shortest to
  False you will get the previous behavior where it depends on the
  quaternions if you get the shortest or longest path (you can switch
  between those paths by negating one of the quaternions).
  This fixes "bug" 1488467.
- Wherever a wrapped C++ function was expecting a vec3/vec4 as input it 
  is now also possible to pass a sequence with 3/4 floats.
- RMShader: Array parameters can now be processed as well.